tests/macros/editor/auto_complete.stderr
error: option `auto_complete` does not exist for kind `editor`
 --> $DIR/auto_complete.rs:3:9
  |
3 |         auto_complete: todo!()
  |         ^^^^^^^^^^^^^
