tests/macros/editor/auto_complete.rs
fn main() {
    discourse::questions![Editor {
        auto_complete: todo!()
    }];
}
